[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioledger-isatab-schema"
version = "0.1.0"
description = "Pydantic models and validator for BioLedger-flavored ISA-Tab assets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "isatools>=0.14",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bioledger_isatab_schema"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
